// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config config doesn't print sensitive data with inspect() 1`] = `
"{
  \\"defaultValue\\": \\"THIS IS DEFAULT VALUE\\",
  \\"port\\": 4000,
  \\"signatureSecret\\": \\"[Sensitive]\\",
  \\"jenkins\\": {
    \\"baseUrl\\": \\"http://localhost\\",
    \\"auth\\": {
      \\"user\\": \\"[Sensitive]\\",
      \\"password\\": \\"[Sensitive]\\"
    },
    \\"token\\": \\"[Sensitive]\\"
  },
  \\"env\\": \\"test\\",
  \\"aws\\": {
    \\"defaults\\": {
      \\"region\\": \\"us-east-1\\",
      \\"sslEnabled\\": true
    },
    \\"ssm\\": {}
  }
}"
`;

exports[`config config doesn't print sensitive data with toString() 1`] = `
"{
  \\"defaultValue\\": \\"THIS IS DEFAULT VALUE\\",
  \\"port\\": 4000,
  \\"signatureSecret\\": \\"[Sensitive]\\",
  \\"jenkins\\": {
    \\"baseUrl\\": \\"http://localhost\\",
    \\"auth\\": {
      \\"user\\": \\"[Sensitive]\\",
      \\"password\\": \\"[Sensitive]\\"
    },
    \\"token\\": \\"[Sensitive]\\"
  },
  \\"env\\": \\"test\\",
  \\"aws\\": {
    \\"defaults\\": {
      \\"region\\": \\"us-east-1\\",
      \\"sslEnabled\\": true
    },
    \\"ssm\\": {}
  }
}"
`;

exports[`config config works 1`] = `
Array [
  "getParametersByPath",
  Object {
    "MaxResults": 10,
    "NextToken": undefined,
    "Path": "/test/textpress-ci",
    "Recursive": true,
    "WithDecryption": true,
  },
  [Function],
]
`;

exports[`config config works 2`] = `
Object {
  "aws": Object {
    "defaults": Object {
      "region": "us-east-1",
      "sslEnabled": true,
    },
    "sqs": Object {
      "defaults": Object {},
      "rendering": Object {
        "DelaySeconds": 0,
        "QueueUrl": "https://sqs.region.amazonaws.com/accountId/queue-name",
      },
    },
    "ssm": Object {},
  },
  "defaultValue": "THIS IS DEFAULT VALUE",
  "env": "test",
  "github": Object {
    "baseUrl": "https://api.github.com",
    "token": "github/token value",
  },
  "inspect": [Function],
  "jenkins": Object {
    "auth": Object {
      "password": "jenkins/auth/password value",
      "user": "jenkins/auth/user value",
    },
    "baseUrl": "http://localhost",
    "token": "jenkins/token value",
  },
  "port": 4000,
  "signatureSecret": "signatureSecret value",
  "toString": [Function],
}
`;

exports[`config extractRemoteParameters works with empty config 1`] = `Object {}`;

exports[`config extractRemoteParameters works with stage prefix 1`] = `
Object {
  "aws": "/production/textpress-ci/aws",
  "github": "/production/textpress-ci/github",
  "jenkins.auth": "/production/textpress-ci/jenkins/auth",
  "jenkins.baseUrl": "/production/textpress-ci/jenkins/baseUrl",
  "jenkins.token": "/production/textpress-ci/jenkins/token",
  "signatureSecret": "/production/textpress-ci/signatureSecret",
}
`;

exports[`config extractRemoteParameters works without stage prefix 1`] = `
Object {
  "aws": "/textpress-ci/aws",
  "github": "/textpress-ci/github",
  "jenkins.auth": "/textpress-ci/jenkins/auth",
  "jenkins.baseUrl": "/textpress-ci/jenkins/baseUrl",
  "jenkins.token": "/textpress-ci/jenkins/token",
  "signatureSecret": "/textpress-ci/signatureSecret",
}
`;

exports[`config loadConfig extends AWS configuration 1`] = `
Object {
  "region": "us-east-1",
  "sslEnabled": false,
}
`;

exports[`config loadConfig replaces AWS configuration 1`] = `
Object {
  "region": "asia",
}
`;

exports[`config loadConfig works 1`] = `
Array [
  "getParametersByPath",
  Object {
    "MaxResults": 10,
    "NextToken": undefined,
    "Path": "/test/textpress-ci",
    "Recursive": true,
    "WithDecryption": true,
  },
  [Function],
]
`;

exports[`config loadConfig works 2`] = `
Object {
  "aws": Object {
    "defaults": Object {
      "region": "us-east-1",
      "sslEnabled": true,
    },
    "sqs": Object {
      "defaults": Object {},
      "rendering": Object {
        "DelaySeconds": 0,
        "QueueUrl": "https://sqs.region.amazonaws.com/accountId/queue-name",
      },
    },
    "ssm": Object {},
  },
  "defaultValue": "THIS IS DEFAULT VALUE",
  "env": "test",
  "github": Object {
    "baseUrl": "https://api.github.com",
    "token": "github/token value",
  },
  "inspect": [Function],
  "jenkins": Object {
    "auth": Object {
      "password": "jenkins/auth/password value",
      "user": "jenkins/auth/user value",
    },
    "baseUrl": "http://localhost",
    "token": "jenkins/token value",
  },
  "port": 4000,
  "signatureSecret": "signatureSecret value",
  "toString": [Function],
}
`;

exports[`config loadConfig works when node environment is production and stage is not provided 1`] = `
Array [
  "getParametersByPath",
  Object {
    "MaxResults": 10,
    "NextToken": undefined,
    "Path": "/textpress-ci",
    "Recursive": true,
    "WithDecryption": true,
  },
  [Function],
]
`;

exports[`config loadConfig works when node environment is production and stage is not provided 2`] = `
Object {
  "aws": Object {
    "defaults": Object {
      "region": "us-east-1",
      "sslEnabled": true,
    },
    "sqs": Object {
      "defaults": Object {},
      "rendering": Object {
        "DelaySeconds": 0,
        "QueueUrl": "https://sqs.region.amazonaws.com/accountId/queue-name",
      },
    },
    "ssm": Object {},
  },
  "defaultValue": "THIS IS DEFAULT VALUE",
  "env": "production",
  "github": Object {
    "baseUrl": "https://api.github.com",
    "token": "github/token value",
  },
  "inspect": [Function],
  "jenkins": Object {
    "auth": Object {
      "password": "jenkins/auth/password value",
      "user": "jenkins/auth/user value",
    },
    "baseUrl": "http://localhost",
    "token": "jenkins/token value",
  },
  "port": 4000,
  "signatureSecret": "signatureSecret value",
  "toString": [Function],
}
`;

exports[`config loadConfig works when node environment is production and stage is provided 1`] = `
Array [
  "getParametersByPath",
  Object {
    "MaxResults": 10,
    "NextToken": undefined,
    "Path": "/test/textpress-ci",
    "Recursive": true,
    "WithDecryption": true,
  },
  [Function],
]
`;

exports[`config loadConfig works when node environment is production and stage is provided 2`] = `
Object {
  "aws": Object {
    "defaults": Object {
      "region": "us-east-1",
      "sslEnabled": true,
    },
    "sqs": Object {
      "defaults": Object {},
      "rendering": Object {
        "DelaySeconds": 0,
        "QueueUrl": "https://sqs.region.amazonaws.com/accountId/queue-name",
      },
    },
    "ssm": Object {},
  },
  "defaultValue": "THIS IS DEFAULT VALUE",
  "env": "production",
  "github": Object {
    "baseUrl": "https://api.github.com",
    "token": "github/token value",
  },
  "inspect": [Function],
  "jenkins": Object {
    "auth": Object {
      "password": "jenkins/auth/password value",
      "user": "jenkins/auth/user value",
    },
    "baseUrl": "http://localhost",
    "token": "jenkins/token value",
  },
  "port": 4000,
  "signatureSecret": "signatureSecret value",
  "toString": [Function],
}
`;

exports[`config loadLocalConfig works 1`] = `
Object {
  "aws": Object {
    "defaults": Object {
      "region": "us-east-1",
      "sslEnabled": true,
    },
    "ssm": Object {},
  },
  "defaultValue": "THIS IS DEFAULT VALUE",
  "env": "test",
  "inspect": [Function],
  "jenkins": Object {
    "auth": Object {
      "password": "jenkins/auth/password value",
      "user": "jenkins/auth/user value",
    },
    "baseUrl": "http://localhost",
    "token": "jenkins/token value",
  },
  "port": 4000,
  "signatureSecret": "signatureSecret value",
  "toString": [Function],
}
`;

exports[`config localConfig doesn't print sensitive data with inspect() 1`] = `
"{
  \\"defaultValue\\": \\"THIS IS DEFAULT VALUE\\",
  \\"port\\": 4000,
  \\"signatureSecret\\": \\"[Sensitive]\\",
  \\"jenkins\\": {
    \\"baseUrl\\": \\"http://localhost\\",
    \\"auth\\": {
      \\"user\\": \\"[Sensitive]\\",
      \\"password\\": \\"[Sensitive]\\"
    },
    \\"token\\": \\"[Sensitive]\\"
  },
  \\"env\\": \\"test\\",
  \\"aws\\": {
    \\"defaults\\": {
      \\"region\\": \\"us-east-1\\",
      \\"sslEnabled\\": true
    },
    \\"ssm\\": {}
  }
}"
`;

exports[`config localConfig doesn't print sensitive data with toString() 1`] = `
"{
  \\"defaultValue\\": \\"THIS IS DEFAULT VALUE\\",
  \\"port\\": 4000,
  \\"signatureSecret\\": \\"[Sensitive]\\",
  \\"jenkins\\": {
    \\"baseUrl\\": \\"http://localhost\\",
    \\"auth\\": {
      \\"user\\": \\"[Sensitive]\\",
      \\"password\\": \\"[Sensitive]\\"
    },
    \\"token\\": \\"[Sensitive]\\"
  },
  \\"env\\": \\"test\\",
  \\"aws\\": {
    \\"defaults\\": {
      \\"region\\": \\"us-east-1\\",
      \\"sslEnabled\\": true
    },
    \\"ssm\\": {}
  }
}"
`;

exports[`config localConfig works 1`] = `
Object {
  "aws": Object {
    "defaults": Object {
      "region": "us-east-1",
      "sslEnabled": true,
    },
    "ssm": Object {},
  },
  "defaultValue": "THIS IS DEFAULT VALUE",
  "env": "test",
  "inspect": [Function],
  "jenkins": Object {
    "auth": Object {
      "password": "jenkins/auth/password value",
      "user": "jenkins/auth/user value",
    },
    "baseUrl": "http://localhost",
    "token": "jenkins/token value",
  },
  "port": 4000,
  "signatureSecret": "signatureSecret value",
  "toString": [Function],
}
`;
